// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Invalid #1 1`] = `
"#### ⌨️ Code

      1 | query myOperation {
      2 |   user @client
      3 |   description @foobar
      4 | }

#### ⚙️ Options

    {
      "bannedDirectives": [
        "client"
      ]
    }

#### ❌ Error

      1 | query myOperation {
    > 2 |   user @client
        |        ^ Use of directive @client is prohibited
      3 |   description @foobar"
`;

exports[`Invalid #2 1`] = `
"#### ⌨️ Code

      1 | query myOperation {
      2 |   user @client
      3 |   description @foobar
      4 | }

#### ⚙️ Options

    {
      "bannedDirectives": [
        "client",
        "foobar"
      ]
    }

#### ❌ Error 1/2

      1 | query myOperation {
    > 2 |   user @client
        |        ^ Use of directive @client is prohibited
      3 |   description @foobar

#### ❌ Error 2/2

      2 |   user @client
    > 3 |   description @foobar
        |               ^ Use of directive @foobar is prohibited
      4 | }"
`;
